#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stowage"
description = "Stow, but in Python, and in a single file"
authors = [
	{name = "Keith Gaughan", email = "keith+stowage@gaughan.ie"},
]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Intended Audience :: End Users/Desktop",
	"Environment :: Console",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Source = "https://github.com/kgaughan/stowage"

[project.scripts]
stowage = "stowage:main"

[tool.rye]
dev-dependencies = [
    "pytest>=8.2.2",
    "mypy>=1.10.1",
]
universal = true
generate-hashes = true
managed = true

[tool.hatch.version]
path = "stowage.py"

[tool.hatch.build]
exclude = [".coveragerc", "Makefile", ".github/", ".*_cache/", "tests/"]

[tool.mypy]
ignore_missing_imports = true
