#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stowage"
dynamic = ["version"]
description = "Stow, but in Python, and in a single file"
license = { file = "LICENSE" }
authors = [{ name = "Keith Gaughan", email = "k+stowage@stereochro.me" }]
requires-python = ">=3.11"
readme = "README.rst"
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://github.com/kgaughan/stowage"
Issues = "https://github.com/kgaughan/stowage/issues"
Source = "https://github.com/kgaughan/stowage"

[project.scripts]
stowage = "stowage:main"

[tool.flit.module]
name = "stowage"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "EXE",
  "F",
  "FBT",
  "FLY",
  "FURB",
  "G",
  "I",
  "ICN",
  "ISC002",
  "LOG",
  "N",
  "PERF",
  "PIE",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLOT",
  "T",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow print
  "T201",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["stowage"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "E501"]

[tool.mypy]
ignore_missing_imports = true
